tests/error/poly_errors/return_mismatch.err
Error: Type mismatch (at $FILE:17:14)
   | 
15 | @guppy(module)
16 | def main() -> None:
17 |     x: bool = foo()
   |               ^^^^^ Expected expression of type `bool`, got `(?T, ?T)`

Guppy compilation failed due to 1 previous error
